# Maltese

./: AnimatedWidget.h  AnimationController.cpp  CMakeLists.txt  CMakeLists.txt.ORIISg  ResourceManager.cpp  ResourceManager.h  RoleAct.h  imgs.qrc  main.cpp  widget.cpp  widget.h
include/: AnimatedWidget.h  AnimationController.h  AppController.h  DraggableWidget.h  ResourceManager.h  RoleAct.h  TrayMenuBuilder.h
resources/: imgs.qrc
resources/img/: rename_frame.bat  rename_resized.bat
src/: AnimatedWidget.cpp  AnimationController.cpp  AppController.cpp  DraggableWidget.cpp  ResourceManager.cpp  TrayMenuBuilder.cpp
